# ControlsForFake

./: .gitignore  .travis.yml  :w  ControlFakeMicWavePlayer.pro  ControlsForFake_fr_FR.ts  PulseAudioComboBox.qml  README.md  SinkInputComboBox.qml  SourceComboBox.qml  SourceOutputComboBox.qml  SubscribeAndListenThread.cpp  controls-for-fake.desktop  fakelibqmlinterface.cpp  fakeplayerthread.cpp  icons.qrc  main.cpp  main.qml  meson.build  meson_options.txt  qml.qrc  sink.cpp  sinkinput.cpp  sinklist.cpp  source.cpp  sourceoutput.cpp  sourceoutput.h  translations.qrc
desktop/: controls-for-fake.desktop.in
icons/: app-icon.svgz
include/: SubscribeAndListenThread.h  fakelibqmlinterface.h  fakeplayerthread.h  sink.h  sinkinput.h  sinklist.h  source.h  sourceoutput.h
subprojects/qt-qml-models/: meson.build
translations/: ControlFakeMicWavePlayer_fr_FR.ts  ControlsForFake_fr_FR.qm  ControlsForFake_fr_FR.ts
